samples/_failures_safe/1761127071_0d1b86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d5f030b.c: In function ‘main’:
./samples/SAFE/__tmp_6d5f030b.c:158:5: error: expected declaration or statement at end of input
  158 |     if (scanf("%d", &start) != 1) {
      |     ^~
./samples/SAFE/__tmp_6d5f030b.c:158:5: error: expected declaration or statement at end of input
